Absolutely position the sponsor tile instead of floating to avoid layout issues.

--- a/app/assets/stylesheets/_globalnav/_core/_ads.sass
+++ b/app/assets/stylesheets/_globalnav/_core/_ads.sass
@@ -64,7 +64,8 @@
   @extend %ad-sponsorTile
 
   .stack__intro &
-    float: right
+    position: absolute
+    right: 25px
 
 .ad-mpu.card__content
   @extend %ad-mpu
